workspace-sf/force-app/main/default/objects/GarantiaProduto__c/GarantiaProduto__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre os produtos e as garantias</description>
    <label>Garantia do produto</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garantias do produto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>