workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/AgrupamentoCoberturas__c.field-meta.xml
<CustomField>
    <fullName>AgrupamentoCoberturas__c</fullName>
    <description>Agrupamento de coberturas para organização.</description>
    <label>Agrupamento Coberturas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saude</fullName>
                <label>Saúde</label>
            </value>
            <value>
                <fullName>Bagagem</fullName>
            </value>
            <value>
                <fullName>Familiares e Acompanhantes</fullName>
            </value>
            <value>
                <fullName>Invalidez ou Morte</fullName>
            </value>
            <value>
                <fullName>Documentacoes</fullName>
                <label>Documentações</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>