workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/ambitoTerritorial__c.field-meta.xml
<CustomField>
    <fullName>ambitoTerritorial__c</fullName>
    <label>Âmbito territorial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TerritorioNacional</fullName>
                <label>Território nacional</label>
            </value>
            <value>
                <fullName>TerritorioGlobal</fullName>
                <label>Território global</label>
            </value>
            <value>
                <fullName>TerritorioGlobalExcetoBrasil</fullName>
                <label>Território global, exceto Brasil</label>
            </value>
            <value>
                <fullName>PaisesdaEuropa</fullName>
                <label>Países da Europa</label>
            </value>
            <value>
                <fullName>PaisesdaAmericaLatinaincluindoOBrasil</fullName>
                <label>Países da América Latina, incluindo o Brasil</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>