workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/CancelaDependentes__c.field-meta.xml
<CustomField>
    <fullName>CancelaDependentes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancela dependentes?</label>
    <type>Checkbox</type>
</CustomField>