workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/CancelaGarantia__c.field-meta.xml
<CustomField>
    <fullName>CancelaGarantia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancela garantia?</label>
    <type>Checkbox</type>
</CustomField>