workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/CancelaSegurado__c.field-meta.xml
<CustomField>
    <fullName>CancelaSegurado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancela segurado?</label>
    <type>Checkbox</type>
</CustomField>