workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/CapitalRiscos__c.field-meta.xml
<CustomField>
    <fullName>CapitalRiscos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capital por riscos?</label>
    <type>Checkbox</type>
</CustomField>