workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/CaracteristicaGarantia__c.field-meta.xml
<CustomField>
    <fullName>CaracteristicaGarantia__c</fullName>
    <label>Característica de garantia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adicional</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Serviço complementar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>