workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/CodigoPlanoSusep__c.field-meta.xml
<CustomField>
    <fullName>CodigoPlanoSusep__c</fullName>
    <inlineHelpText>PLN código que deverá ser informado pela contabilidade. Obrigatório para ramos: 0983, 0986, 0996, 1383, 1386, 1391, 1396.</inlineHelpText>
    <label>Código Plano Susep</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>