workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/CodigoPromocao__c.field-meta.xml
<CustomField>
    <fullName>CodigoPromocao__c</fullName>
    <description>Picklist obrigatória se o campo Sorteio no campo tipo de característica especial, for selecionado.</description>
    <inlineHelpText>Cod.167 - Vida 01 Sorteio
Cod.171 - Vida 02 Sorteios
Cod.168 - Vida 04 Sorteios
Cod.VI010 - Vida 1 Sorteio
Cod.VI011 – Vida 3 Sorteios</inlineHelpText>
    <label>Código da promoção</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>167</fullName>
            </value>
            <value>
                <fullName>168</fullName>
            </value>
            <value>
                <fullName>171</fullName>
            </value>
            <value>
                <fullName>VITST</fullName>
            </value>
            <value>
                <fullName>VI010</fullName>
            </value>
            <value>
                <fullName>VI011</fullName>
            </value>
            <value>
                <fullName>VI005</fullName>
                <isActive>false</isActive>
                <label>VI005</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>