workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/ComunicarEtapasSinistro__c.field-meta.xml
<CustomField>
    <fullName>ComunicarEtapasSinistro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comunicar etapas do sinistro?</label>
    <type>Checkbox</type>
</CustomField>