workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/Controle_de_Uso_Saldo__c.field-meta.xml
<CustomField>
    <fullName>Controle_de_Uso_Saldo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Controle de Uso/Saldo</label>
    <type>Checkbox</type>
</CustomField>