workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/CustoCaracteristicaEspecial__c.field-meta.xml
<CustomField>
    <fullName>CustoCaracteristicaEspecial__c</fullName>
    <label>Custo da característica especial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>