workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/DataSolicitacao__c.field-meta.xml
<CustomField>
    <fullName>DataSolicitacao__c</fullName>
    <label>Data de solicitação</label>
    <type>Date</type>
</CustomField>