workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/DemonstracaoCapital__c.field-meta.xml
<CustomField>
    <fullName>DemonstracaoCapital__c</fullName>
    <label>Demonstração de capital</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acumulado</fullName>
            </value>
            <value>
                <fullName>Não acumulado</fullName>
            </value>
            <value>
                <fullName>Com incremento</fullName>
            </value>
            <value>
                <fullName>Serviço Complementar (sem valor de capital)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>