workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/DemonstracaoPremio__c.field-meta.xml
<CustomField>
    <fullName>DemonstracaoPremio__c</fullName>
    <label>Demonstração de prêmio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garantia gratuita</fullName>
            </value>
            <value>
                <fullName>Na garantia principal</fullName>
            </value>
            <value>
                <fullName>Na própria garantia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>