workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/DependentesCancelar__c.field-meta.xml
<CustomField>
    <fullName>DependentesCancelar__c</fullName>
    <label>Dependentes para cancelar</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cônjuge</fullName>
            </value>
            <value>
                <fullName>Filho(s)</fullName>
            </value>
            <value>
                <fullName>Pais</fullName>
            </value>
            <value>
                <fullName>Sogros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>