workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <inlineHelpText>Necessário alinhamento com Contabilidade para preenchimento desse campo</inlineHelpText>
    <label>Descrição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>