workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/DocumentosAviso__c.field-meta.xml
<CustomField>
    <fullName>DocumentosAviso__c</fullName>
    <label>Documentos para aviso</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anátomo-patológico (cópia simples)</fullName>
            </value>
            <value>
                <fullName>Autorização para crédito em conta corrente/ poupança de titularidade do(s) herdeiro(s) legal(is)</fullName>
            </value>
            <value>
                <fullName>Autorização para crédito em conta corrente/ poupança de titularidade do beneficiário</fullName>
            </value>
            <value>
                <fullName>Autorização para crédito em conta corrente/ poupança de titularidade do representante legal</fullName>
            </value>
            <value>
                <fullName>Boletim de ocorrência (cópia autenticada)</fullName>
            </value>
            <value>
                <fullName>Boletim de ocorrência (cópia simples)</fullName>
            </value>
            <value>
                <fullName>Boletim de ocorrência Policial (cópia autenticada)</fullName>
            </value>
            <value>
                <fullName>Boletim de ocorrência Policial (original)</fullName>
            </value>
            <value>
                <fullName>Cartão bancário e/ou cheque para validação dos dados bancários  (Cópia Simples)</fullName>
            </value>
            <value>
                <fullName>Carteira nacional de habilitação do condutor do veículo segurado (cópia simples)</fullName>
            </value>
            <value>
                <fullName>Carteira nacional de habilitação do segurado (cópia simples)</fullName>
            </value>
            <value>
                <fullName>Certidão de casamento atualizada</fullName>
            </value>
            <value>
                <fullName>Certidão de casamento extraída após o óbito da vítima com averbações (cópia autenticada)</fullName>
            </value>
            <value>
                <fullName>Certidão de casamento extraída após o óbito da vítima com averbações (cópia simples)</fullName>
            </value>
            <value>
                <fullName>Certidão de nascimento (cópia simples)</fullName>
            </value>
            <value>
                <fullName>Certidão de nascimento do Beneficiário (cópia simples)</fullName>
            </value>
            <value>
                <fullName>Certidão de nascimento dos filhos e enteados</fullName>
            </value>
            <value>
                <fullName>Certidão de óbito (cópia autenticada)</fullName>
            </value>
            <value>
                <fullName>Certidão de óbito (cópia simples)</fullName>
            </value>
            <value>
                <fullName>Comprovante de rendimento (salário) referente aos 3 meses anteriores a ocorrência do evento</fullName>
            </value>
            <value>
                <fullName>Comprovante de residência atualizado (cópia simples)</fullName>
            </value>
            <value>
                <fullName>Comprovante de residência atualizado do beneficiário (cópia simples)</fullName>
            </value>
            <value>
                <fullName>Comprovante de residência atualizado do custeador (cópia simples)</fullName>
            </value>
            <value>
                <fullName>Comprovante de residência do curador nomeado (cópia simples)</fullName>
            </value>
            <value>
                <fullName>Comprovante de residência do representante legal (cópia simples)</fullName>
            </value>
            <value>
                <fullName>Comprovante de vínculo empregatício (cópia simples)</fullName>
            </value>
            <value>
                <fullName>Comprovante do recibo/nota para o reembolso da mala danificada (orignal)</fullName>
            </value>
            <value>
                <fullName>Comprovantes de despesas (original)</fullName>
            </value>
            <value>
                <fullName>Comprovantes do valor da(s) multa(s) retida(s) no caso de cancelamento</fullName>
            </value>
            <value>
                <fullName>Comprovante vínculo oficial entre o segurado e o estipulante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>