workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/FinalidadeRemissao__c.field-meta.xml
<CustomField>
    <fullName>FinalidadeRemissao__c</fullName>
    <label>Finalidade de remissão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quitar parcelas dos dependentes</fullName>
            </value>
            <value>
                <fullName>Quitar parcelas do próprio segurado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>