workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/FormaExibicaoCapital__c.field-meta.xml
<CustomField>
    <fullName>FormaExibicaoCapital__c</fullName>
    <label>Forma de exibição do capital</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lista</fullName>
            </value>
            <value>
                <fullName>Valor fixo</fullName>
            </value>
            <value>
                <fullName>Valor informado</fullName>
            </value>
            <value>
                <fullName>Serviço Complementar (sem valor de capital)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>