workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/FormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>FormaPagamento__c</fullName>
    <label>Forma de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parcelado</fullName>
            </value>
            <value>
                <fullName>Imediata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>