workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/Garantia__c.field-meta.xml
<CustomField>
    <fullName>Garantia__c</fullName>
    <label>Garantia</label>
    <referenceTo>Garantia__c</referenceTo>
    <relationshipLabel>Garantias do produto</relationshipLabel>
    <relationshipName>GarantiasProduto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>