workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/GarantiaDeduzir__c.field-meta.xml
<CustomField>
    <fullName>GarantiaDeduzir__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantia a deduzir</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GarantiaProduto__c.Produto__c</field>
            <operation>equals</operation>
            <valueField>$Source.Produto__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GarantiaProduto__c</referenceTo>
    <relationshipLabel>Garantias do produto (Garantia à deduzir)</relationshipLabel>
    <relationshipName>GarantiasProduto_GarantiaDeduzir</relationshipName>
    <type>Lookup</type>
</CustomField>