workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/GarantiaLimitadora__c.field-meta.xml
<CustomField>
    <fullName>GarantiaLimitadora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantia limitadora</label>
    <referenceTo>GarantiaProduto__c</referenceTo>
    <relationshipLabel>Garantias do produto</relationshipLabel>
    <relationshipName>GarantiasProduto</relationshipName>
    <type>Lookup</type>
</CustomField>