workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/LimiteCapitalMaximo__c.field-meta.xml
<CustomField>
    <fullName>LimiteCapitalMaximo__c</fullName>
    <label>Limite de capital máximo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>