workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/LimiteCapitalMinimo__c.field-meta.xml
<CustomField>
    <fullName>LimiteCapitalMinimo__c</fullName>
    <label>Limite de capital mínimo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>