workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/LimiteMaximoCaracteristicaEspecial__c.field-meta.xml
<CustomField>
    <fullName>LimiteMaximoCaracteristicaEspecial__c</fullName>
    <label>Limite máximo de característica especial</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>