workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/LimiteMaximoUtilizacao__c.field-meta.xml
<CustomField>
    <fullName>LimiteMaximoUtilizacao__c</fullName>
    <inlineHelpText>Limite para utilizar a garantia acionada</inlineHelpText>
    <label>Limite máximo de utilização</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>