workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/LimiteMinimoCaracteristicaEspecial__c.field-meta.xml
<CustomField>
    <fullName>LimiteMinimoCaracteristicaEspecial__c</fullName>
    <label>Limite mínimo de característica especial</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>