workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/LimiteReintegracoes__c.field-meta.xml
<CustomField>
    <fullName>LimiteReintegracoes__c</fullName>
    <label>Limite de reintegrações</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>