workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/Modalidade__c.field-meta.xml
<CustomField>
    <fullName>Modalidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modalidade</label>
    <referenceTo>Modalidade__c</referenceTo>
    <relationshipLabel>Garantias do produto</relationshipLabel>
    <relationshipName>Garantias_do_produto</relationshipName>
    <type>Lookup</type>
</CustomField>