workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/MomentoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>MomentoCancelamento__c</fullName>
    <label>Momento do cancelamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aviso</fullName>
            </value>
            <value>
                <fullName>Pagamento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>