workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/Obrigatoria__c.field-meta.xml
<CustomField>
    <fullName>Obrigatoria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obrigatória?</label>
    <type>Checkbox</type>
</CustomField>