workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/OrdemPrioridade__c.field-meta.xml
<CustomField>
    <fullName>OrdemPrioridade__c</fullName>
    <inlineHelpText>Refere-se a prioridade para utilização do ramo líder caso haja a escolha de mais de uma garantia na contratação.</inlineHelpText>
    <label>Ordem de prioridade ramo líder</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>