workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/OrigemSinistroBeneficio__c.field-meta.xml
<CustomField>
    <fullName>OrigemSinistroBeneficio__c</fullName>
    <label>Origem do sinistro e benefício</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acidente</fullName>
            </value>
            <value>
                <fullName>Benefício</fullName>
            </value>
            <value>
                <fullName>Desemprego</fullName>
            </value>
            <value>
                <fullName>Doença</fullName>
            </value>
            <value>
                <fullName>Viagem</fullName>
            </value>
            <value>
                <fullName>Sorteio</fullName>
                <isActive>false</isActive>
                <label>Sorteio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>