workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/PassivelResseguro__c.field-meta.xml
<CustomField>
    <fullName>PassivelResseguro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passível de resseguro?</label>
    <type>Checkbox</type>
</CustomField>