workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/PercentualAgravoMaximo__c.field-meta.xml
<CustomField>
    <fullName>PercentualAgravoMaximo__c</fullName>
    <label>Percentual de agravo máximo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>