workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/PercentualAgravoMinimo__c.field-meta.xml
<CustomField>
    <fullName>PercentualAgravoMinimo__c</fullName>
    <label>Percentual de agravo mínimo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>