workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/PercentualCapitalMaximo__c.field-meta.xml
<CustomField>
    <fullName>PercentualCapitalMaximo__c</fullName>
    <label>Percentual de capital máximo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>