workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/PercentualCapitalMinimo__c.field-meta.xml
<CustomField>
    <fullName>PercentualCapitalMinimo__c</fullName>
    <label>Percentual de capital mínimo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>