workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/PercentualDescontoMinimo__c.field-meta.xml
<CustomField>
    <fullName>PercentualDescontoMinimo__c</fullName>
    <label>Percentual de desconto mínimo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>