workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/PercentualMaximoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>PercentualMaximoCancelamento__c</fullName>
    <label>Percentual máximo para cancelamento</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>