workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/PeriodoRemissao__c.field-meta.xml
<CustomField>
    <fullName>PeriodoRemissao__c</fullName>
    <label>Período de remissão</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>