workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/PermiteExibicao__c.field-meta.xml
<CustomField>
    <fullName>PermiteExibicao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permite exibição?</label>
    <type>Checkbox</type>
</CustomField>