workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/Possui_reintegracao__c.field-meta.xml
<CustomField>
    <fullName>Possui_reintegracao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A garantia possui reintegração?</label>
    <type>Checkbox</type>
</CustomField>