workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/PrazoAvisoSinistro__c.field-meta.xml
<CustomField>
    <fullName>PrazoAvisoSinistro__c</fullName>
    <label>Prazo para aviso de sinistro</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>