workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/PrazoMaximoLiquidacao__c.field-meta.xml
<CustomField>
    <fullName>PrazoMaximoLiquidacao__c</fullName>
    <label>Prazo máximo para liquidação</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>