workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/Prestadora__c.field-meta.xml
<CustomField>
    <fullName>Prestadora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestadora</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Garantias do produto</relationshipLabel>
    <relationshipName>GarantiasProduto</relationshipName>
    <type>Lookup</type>
</CustomField>