workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/QuantidadeDependentes__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDependentes__c</fullName>
    <inlineHelpText>Quantos dependentes podem ser inseridos no produto</inlineHelpText>
    <label>Quantidade de dependentes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>