workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/QuantidadeMaximaContratacao__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeMaximaContratacao__c</fullName>
    <inlineHelpText>Quantas vezes a garantia poderá ser contratada por um CPF/CNPJ</inlineHelpText>
    <label>Quantidade máxima de contratação</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>