workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/RamoSeguro__c.field-meta.xml
<CustomField>
    <fullName>RamoSeguro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ramo de seguro</label>
    <referenceTo>RamoSeguro__c</referenceTo>
    <relationshipLabel>Garantias do produto</relationshipLabel>
    <relationshipName>GarantiasProduto</relationshipName>
    <type>Lookup</type>
</CustomField>