workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/RiscosCobertos__c.field-meta.xml
<CustomField>
    <fullName>RiscosCobertos__c</fullName>
    <label>Riscos cobertos</label>
    <type>TextArea</type>
</CustomField>