workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/RiscosExcluidos__c.field-meta.xml
<CustomField>
    <fullName>RiscosExcluidos__c</fullName>
    <label>Riscos Excluídos</label>
    <type>TextArea</type>
</CustomField>