workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/Sem_Acao__c.field-meta.xml
<CustomField>
    <fullName>Sem_Acao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sem Ação</label>
    <type>Checkbox</type>
</CustomField>