workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/TempoContagem__c.field-meta.xml
<CustomField>
    <fullName>TempoContagem__c</fullName>
    <label>Tempo de contagem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TempoContagem</valueSetName>
    </valueSet>
</CustomField>