workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/TipoBeneficiario__c.field-meta.xml
<CustomField>
    <fullName>TipoBeneficiario__c</fullName>
    <label>Tipo de beneficiário</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoBeneficiario</valueSetName>
    </valueSet>
</CustomField>