workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/TipoCaracteristicaEspecial__c.field-meta.xml
<CustomField>
    <fullName>TipoCaracteristicaEspecial__c</fullName>
    <label>Tipo de característica especial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ano(s)</fullName>
            </value>
            <value>
                <fullName>Assessoria</fullName>
            </value>
            <value>
                <fullName>Cestas</fullName>
            </value>
            <value>
                <fullName>Dia(s)</fullName>
            </value>
            <value>
                <fullName>Mês(es)</fullName>
            </value>
            <value>
                <fullName>Permanência no exterior</fullName>
            </value>
            <value>
                <fullName>Quilos</fullName>
            </value>
            <value>
                <fullName>Semana(s)</fullName>
            </value>
            <value>
                <fullName>Semestre(s)</fullName>
            </value>
            <value>
                <fullName>Trimestre(s)</fullName>
            </value>
            <value>
                <fullName>Sorteio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>