workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/TipoCobranca__c.field-meta.xml
<CustomField>
    <fullName>TipoCobranca__c</fullName>
    <label>Tipo de cobrança</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vida ativa</fullName>
            </value>
            <value>
                <fullName>Serviço prestado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>