workspace-sf/force-app/main/default/objects/GarantiaProduto__c/fields/TipoGarantia__c.field-meta.xml
<CustomField>
    <fullName>TipoGarantia__c</fullName>
    <label>Tipo de garantia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoGarantia</valueSetName>
    </valueSet>
</CustomField>